--- a/styles.css
+++ b/styles.css
@@ -34,5 +34,77 @@ body {
     font-family: "Figtree", sans-serif;
     font-weight: 500;
     font-size: 16px;
+    line-height: 150%;
+    background-color: var(--yellow);
     color: var(--gray-950);
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    min-width: 327px;
+    padding: 24px;
+    gap: 24px;
+    border: 1px solid var(--gray-950);
+    background-color: var(--white);
+    border-radius: 20px;
+    box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 100%);
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    .tag {
+        font-size: 12px;
+        font-weight: 800;
+        width: fit-content;
+        padding: 4px 12px;
+        background-color: var(--yellow);
+        border-radius: 4px;
+    }
+
+    .date {
+        font-size: 12px;
+    }
+
+    h1.title {
+        font-size: 20px;
+        font-weight: 800;
+    }
+
+    .description {
+        font-size: 14px;
+        color: var(--gray-500);
+    }
+}
+
+.card-author {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    .avatar {
+        width: 32px;
+        height: 32px;
+    }
+
+    p.name {
+        font-size: 14px;
+        font-weight: 800;
+    }
 }
