--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,13 @@ img {
 body {
     font-family: "Figtree", sans-serif;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 150%;
     background-color: var(--yellow);
     color: var(--gray-950);
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 main {
@@ -44,13 +47,15 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    padding: 24px;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     min-width: 327px;
+    max-width: 384px;
     padding: 24px;
     gap: 24px;
     border: 1px solid var(--gray-950);
@@ -61,7 +66,9 @@ main {
 
 .card-img {
     width: 100%;
+    height: 200px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .card-body {
@@ -80,16 +87,27 @@ main {
 
     .date {
         font-size: 12px;
+
+        @media (min-width: 600px) {
+            font-size: 14px;
+        }
     }
 
     h1.title {
         font-size: 20px;
         font-weight: 800;
+
+        @media (min-width: 600px) {
+            font-size: 24px;
+        }
     }
 
     .description {
-        font-size: 14px;
         color: var(--gray-500);
+
+        @media (min-width: 600px) {
+            font-size: 16px;
+        }
     }
 }
 
@@ -104,7 +122,6 @@ main {
     }
 
     p.name {
-        font-size: 14px;
         font-weight: 800;
     }
 }
