--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,18 @@ main {
 .card {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    min-width: 327px;
-    max-width: 384px;
+    width: 327px;
+    flex-shrink: 0;
     padding: 24px;
     gap: 24px;
     border: 1px solid var(--gray-950);
     background-color: var(--white);
     border-radius: 20px;
     box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 100%);
+
+    @media (min-width: 600px) {
+        width: 384px;
+    }
 }
 
 .card-img {
