--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,14 @@ main {
     h1.title {
         font-size: 20px;
         font-weight: 800;
+        cursor: pointer;
 
         @media (min-width: 600px) {
             font-size: 24px;
+        }
+
+        &:hover {
+            color: var(--yellow);
         }
     }
 
