--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,10 @@ main {
         line-height: 150%;
         background-color: var(--yellow);
         border-radius: 4px;
+
+        @media (min-width: 600px) {
+            font-size: 14px;
+        }
     }
 
     .date {
@@ -115,6 +119,7 @@ main {
     .description {
         color: var(--gray-500);
         line-height: 150%;
+
         @media (min-width: 600px) {
             font-size: 16px;
         }
